dodanie widgetow w panelu uzytkownika

--- a/zpi_django/.settings/org.eclipse.core.resources.prefs
+++ b/zpi_django/.settings/org.eclipse.core.resources.prefs
@@ -9,7 +9,7 @@ encoding//zpi_django/auth/urls.py=utf-8
 encoding//zpi_django/auth/views.py=utf8
 encoding//zpi_django/calendar/models.py=utf-8
 encoding//zpi_django/calendar/urls.py=utf-8
-encoding//zpi_django/calendar/views.py=UTF-8
+encoding//zpi_django/calendar/views.py=utf8
 encoding//zpi_django/cities/models.py=utf-8
 encoding//zpi_django/event_comments/models.py=utf-8
 encoding//zpi_django/event_comments/urls.py=utf-8
@@ -17,7 +17,6 @@ encoding//zpi_django/event_comments/views.py=utf8
 encoding//zpi_django/event_feedbacks/models.py=utf-8
 encoding//zpi_django/event_feedbacks/urls.py=utf-8
 encoding//zpi_django/event_feedbacks/views.py=utf8
-encoding//zpi_django/event_observators/models.py=utf-8
 encoding//zpi_django/events/events_forms.py=utf8
 encoding//zpi_django/events/fields.py=utf8
 encoding//zpi_django/events/models.py=utf-8
@@ -27,6 +26,9 @@ encoding//zpi_django/friends/models.py=utf-8
 encoding//zpi_django/friends/urls.py=utf-8
 encoding//zpi_django/friends/views.py=utf8
 encoding//zpi_django/place/models.py=utf-8
+encoding//zpi_django/site_media/js/calendar/calendar_json.js=UTF-8
+encoding//zpi_django/site_media/js/calendar/join.js=UTF-8
+encoding//zpi_django/site_media/js/calendar/translation.js=UTF-8
 encoding//zpi_django/site_media/js/event_feedbacks/add_feedback.js=UTF-8
 encoding//zpi_django/statistics/models.py=utf-8
 encoding//zpi_django/statistics/urls.py=utf-8
@@ -35,7 +37,6 @@ encoding//zpi_django/tags/models.py=utf-8
 encoding//zpi_django/tags/tag_form.py=utf8
 encoding//zpi_django/template/auth/login.html=UTF-8
 encoding//zpi_django/template/auth/registration.html=UTF-8
-encoding//zpi_django/template/calendar/calendar.html=UTF-8
 encoding//zpi_django/template/events/add_event.html=UTF-8
 encoding//zpi_django/template/events/add_event_wizard.html=UTF-8
 encoding//zpi_django/template/events/event_detail.html=UTF-8
